[package]
name = "tokenizers-c"
version = "0.1.0"
authors = ["Niupple <niupple@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "tokenizers"
crate-type = ["cdylib"]

[dependencies]

[dependencies.tokenizers]
version = "*"
path = "../../tokenizers"